@@ -1,11 +1,11 @@
 Package: mefaspat
 Type: Package
-Title: mefaspat - contributions for sedaR project by Peter Solymos
+Title: mefaspat - functions for spatial ecological data and compatibility with the mefa package
 Version: 1.0-1
 Date: 2008-08-16
 Author: Peter Solymos
 Maintainer: Peter Solymos <psolymos@gmail.com>
-Description: The mefaspat package contains contributions for sedar project by Peter Solymos.
+Description: Miscellaneous functions for mainly multivariate spatial ecological data and compatibility with the mefa package. The mefaspat package contains contributions for sedar project by Peter Solymos.
 Depends: vegan, fields, prabclus
 License: GPL-2
 LazyLoad: yes
